[gd_scene load_steps=2 format=3 uid="uid://simple_hud"]

[ext_resource type="Script" path="res://src/ui/hud/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopLeftContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 1.0
offset_top = 10.0
offset_left = 10.0
grow_vertical = 1

[node name="HealthLabel" type="Label" parent="Control/TopLeftContainer"]
layout_mode = 2
text = "Health: 100/100"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control/TopLeftContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="Control/TopLeftContainer"]
layout_mode = 2
text = "Wave: 1"
horizontal_alignment = 1

[node name="FPSLabel" type="Label" parent="Control/TopLeftContainer"]
layout_mode = 2
text = "FPS: 60"
horizontal_alignment = 1
